add flink support